[gd_scene load_steps=13 format=3 uid="uid://qtqucl3e38hj"]

[ext_resource type="Script" uid="uid://don3r8xe1kc1y" path="res://Assets/codec.gd" id="1_podmo"]
[ext_resource type="FontFile" uid="uid://cisiueanfm47k" path="res://Assets/Fonts/PixelEmulator-xq08.ttf" id="2_podmo"]
[ext_resource type="Texture2D" uid="uid://ie7ylpnskabx" path="res://Assets/Sprites/Codec Talking Frames/CodeDecBothMouthClosed.png" id="3_yix3d"]
[ext_resource type="Texture2D" uid="uid://ytf7unrg7iwy" path="res://Assets/Sprites/Codec Talking Frames/CodeDecLeftMouthOpen.png" id="4_laus7"]
[ext_resource type="Texture2D" uid="uid://bb6ysxkrk5q7i" path="res://Assets/Sprites/Codec Talking Frames/CodeDecRightMouthOpen.png" id="5_v64lt"]
[ext_resource type="Texture2D" uid="uid://mjvkwsnuxv20" path="res://Assets/Sprites/Codec Talking Frames/CodeDecRightChangeExpresssionMouthClose.png" id="5_yix3d"]
[ext_resource type="Texture2D" uid="uid://cdb87ajj7uoc2" path="res://Assets/Sprites/Codec Talking Frames/CodeDecRightChangeExpresssionMouthOpen.png" id="6_laus7"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_klmiq"]
bg_color = Color(0, 0, 0, 0.631373)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_podmo"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="SpriteFrames" id="SpriteFrames_ugwvt"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_yix3d")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_yix3d")
}, {
"duration": 1.0,
"texture": ExtResource("4_laus7")
}],
"loop": true,
"name": &"left talk",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_yix3d")
}, {
"duration": 1.0,
"texture": ExtResource("6_laus7")
}],
"loop": true,
"name": &"right expression?",
"speed": 9.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_yix3d")
}, {
"duration": 1.0,
"texture": ExtResource("5_v64lt")
}],
"loop": true,
"name": &"right talk",
"speed": 9.0
}]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yix3d"]
bg_color = Color(0, 0, 0, 0.627451)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_laus7"]
bg_color = Color(0, 0, 0, 0.627451)

[node name="Codec" type="Node2D"]
script = ExtResource("1_podmo")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -640.0
offset_top = -360.0
offset_right = 640.0
offset_bottom = 360.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_klmiq")

[node name="SolidBlackBackground" type="Panel" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -576.0
offset_top = -324.0
offset_right = 576.0
offset_bottom = 324.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_podmo")

[node name="CodeDecDta2" type="Sprite2D" parent="Panel"]
visible = false
position = Vector2(353, 199)
scale = Vector2(0.993827, 0.993827)
texture = ExtResource("5_v64lt")
centered = false

[node name="CodecAnimatedSprite" type="AnimatedSprite2D" parent="Panel"]
position = Vector2(170.667, 96)
scale = Vector2(1.62963, 1.62963)
sprite_frames = SubResource("SpriteFrames_ugwvt")
animation = &"right talk"
frame_progress = 0.749854
centered = false

[node name="LeftShadow" type="Panel" parent="Panel/CodecAnimatedSprite"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -197.591
offset_top = -142.977
offset_right = -83.4547
offset_bottom = 8.5909
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_yix3d")

[node name="RightShadow" type="Panel" parent="Panel/CodecAnimatedSprite"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 84.6817
offset_top = -136.841
offset_right = 198.204
offset_bottom = 5.52271
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_laus7")

[node name="FullDialogueBox" type="RichTextLabel" parent="Panel"]
layout_mode = 0
offset_left = 251.0
offset_top = 409.0
offset_right = 1024.0
offset_bottom = 579.0
theme_override_fonts/normal_font = ExtResource("2_podmo")
theme_override_font_sizes/normal_font_size = 32
scroll_active = false

[node name="StageNumLabel" type="RichTextLabel" parent="Panel"]
layout_mode = 0
offset_left = 250.0
offset_top = 400.0
offset_right = 504.0
offset_bottom = 473.0
theme_override_fonts/normal_font = ExtResource("2_podmo")
theme_override_font_sizes/normal_font_size = 42
text = "STAGE 1"
scroll_active = false

[node name="DifficultyLabel" type="RichTextLabel" parent="Panel"]
layout_mode = 0
offset_left = 250.0
offset_top = 450.0
offset_right = 573.0
offset_bottom = 515.0
theme_override_fonts/normal_font = ExtResource("2_podmo")
theme_override_font_sizes/normal_font_size = 42
text = "DIFFICULTY:"
scroll_active = false

[node name="DialogueIndicator" type="RichTextLabel" parent="Panel"]
layout_mode = 0
offset_left = 983.0
offset_top = 561.0
offset_right = 1024.0
offset_bottom = 614.0
theme_override_fonts/normal_font = ExtResource("2_podmo")
theme_override_font_sizes/normal_font_size = 42
text = "â–¼"
scroll_active = false

[node name="EasyLabelTag" type="RichTextLabel" parent="Panel"]
visible = false
layout_mode = 0
offset_left = 815.0
offset_top = 450.0
offset_right = 1100.0
offset_bottom = 517.0
theme_override_colors/default_color = Color(0, 1, 0, 1)
theme_override_fonts/normal_font = ExtResource("2_podmo")
theme_override_font_sizes/normal_font_size = 42
text = "EASY"
scroll_active = false

[node name="MediumLabelTag" type="RichTextLabel" parent="Panel"]
visible = false
layout_mode = 0
offset_left = 815.0
offset_top = 450.0
offset_right = 1100.0
offset_bottom = 517.0
theme_override_colors/default_color = Color(1, 1, 0, 1)
theme_override_fonts/normal_font = ExtResource("2_podmo")
theme_override_font_sizes/normal_font_size = 42
text = "MEDIUM"
scroll_active = false

[node name="HardLabelTag" type="RichTextLabel" parent="Panel"]
visible = false
layout_mode = 0
offset_left = 815.0
offset_top = 450.0
offset_right = 1100.0
offset_bottom = 517.0
theme_override_colors/default_color = Color(1, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("2_podmo")
theme_override_font_sizes/normal_font_size = 42
text = "HARD"
scroll_active = false

[node name="StyleLabel" type="RichTextLabel" parent="Panel"]
layout_mode = 0
offset_left = 250.0
offset_top = 500.0
offset_right = 638.0
offset_bottom = 557.0
theme_override_fonts/normal_font = ExtResource("2_podmo")
theme_override_font_sizes/normal_font_size = 42
text = "STYLE FACTOR:"
scroll_active = false

[node name="StyleNumLabel" type="RichTextLabel" parent="Panel"]
layout_mode = 0
offset_left = 815.0
offset_top = 500.0
offset_right = 950.0
offset_bottom = 562.0
theme_override_colors/default_color = Color(0.423652, 0.905523, 1, 1)
theme_override_fonts/normal_font = ExtResource("2_podmo")
theme_override_font_sizes/normal_font_size = 42
text = "0.6x"
scroll_active = false

[node name="SpeechLines" type="Node2D" parent="Panel"]
visible = false
position = Vector2(778, 370)

[node name="Line2D" type="Line2D" parent="Panel/SpeechLines"]
points = PackedVector2Array(-22, 16, 1.5, -1)
width = 5.0

[node name="Line2D2" type="Line2D" parent="Panel/SpeechLines"]
points = PackedVector2Array(-1.5, -1, 22, 16)
width = 5.0

[node name="Timer" type="Timer" parent="."]
wait_time = 0.05
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
